# allocate-mem

./: CMakeLists.txt  README.md
src/: main.cpp
